k8s/api-strip-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: strip-api-prefix
    namespace: default
spec:
    stripPrefix:
        prefixes:
            - /api
